--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "puppeteer": "^24.14.0"
   }
 }
